# LewRep2

./: .gitignore  AI_Policy.md  CONTRIBUTING.md  LICENSE  PHILOSOPHY.md  README.md  flake.nix
lewcolour/: Cargo.toml
lewcolour/src/: .lib.rs.kate-swp  lib.rs
lewrep/: Cargo.toml  flake.nix  result
lewrep/src/: main.rs
timo/: Cargo.toml  Users:.fileloc
timo/src/: lib.rs
