[package]
name = "lewrep2"
version = "2.1.0"
edition = "2021"

[dependencies]
lewcolour = "0.1.0"
timo = { package = "lew-timo", version = "0.1.0" }
memmap2 = "0.9"
ignore = "0.4"
memchr = "2.7"
fsize-core = "0.2.1"
rayon = "1.10"
grep-searcher = "0.1.14"
grep-regex = "0.1.14"
regex = "1.12.4"

[profile.release]
lto = true              # for faster binary, but it makes compiling slower
codegen-units = 1       # same
panic = "abort"         # no panics (it is fine for lewrep) and smaller binary
strip = true            # small bin
